--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Stack Signup Screen</title>
     <script src="https://kit.fontawesome.com/5e08b15075.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="stack-header">
-
-        <!--left upper buttons-->
-        <ol class="left-upper-buttons">
-            <li class="listnowrap"><a href="https://stackoverflow.com/" class="stack-link"><i
+        <ul class="left-upper-buttons">
+            <li class="no-wrap-text"><a href="https://stackoverflow.com/" class="stack-link"><i
                         class="fa-brands fa-stack-overflow fa-fw"></i>stack<b>overflow</b></a></li>
             <li>About</li>
             <li>Products</li>
             <li class="no-wrap-text">For Teams</li>
-        </ol>
-        <!---->
-        <!--search bar-->
+        </ul>
         <div class="search-bar">
             <label for="searchbar"></label>
             <input type="search" id="searchbar" placeholder="search">
-            <!---->
-            <!--right
- upper buttons-->
         </div>
-        <ol class="right-upper-buttons">
+        <ul class="right-upper-buttons">
             <li class="login">Login</li>
             <li class="signup">Signup</li>
-        </ol>
+        </ul>
     </div>
-    <!---->
+ 
     <div class="container">
-        <div class="sub-container">
             <div class="left-section">
                 <div class="left-list-header">Join the Stack Overflow community</div>
 
-                <div class="left-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
+              <!--- <div class="left-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
                     a question</div>
                 <div class="left-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock new
                     privileges like voting and commenting</div>
                 <div class="left-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your favorite
                     tags, filters, and jobs</div>
                 <div class="left-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn reputation and
-                    badges</div>
+                    badges</div>-->
+
+                <ul class="left-list">
+                    <li class="left-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
+                        a question</li>
+                    <li class="left-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock new
+                        privileges like voting and commenting</li>
+                    <li class="left-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your favorite
+                        tags, filters, and jobs</li>
+                    <li class="left-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn reputation and
+                        badges</li>
+                </ul>
                 <div class="left-list last-left-text">Collaborate and share knowledge with a private group for
                     FREE.<br><a
                         href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
@@ -86,6 +88,7 @@
                     </div>
                 </div>
             </div>
+    </div>
 </body>
 
 </html>
