css dosyasında değişiklikler yapıldı

--- a/index.html
+++ b/index.html
@@ -56,34 +56,42 @@
                     Facebook</div>
             </div>
             <div class="signup-box">
-                <div class="name-inf information">
-                    <label for="name"><b>Display name</b></label><br>
-                    <input type="text" class="name" id="name" name="display-name"></input>
-                </div>
-                <div class="email-inf information">
-                    <label for="email"><b>Email</b></input><br>
-                        <input type="email" id="email" class="email" name="email"></input>
-                </div>
-                <div class="password-inf information">
-                    <label for="password"><b>Password</b></label><br>
-                    <input type="password" name="password" id="password">
-                </div>
-                <div class="info information">
-                    <p>Passwords must contain at least eight characters, including at least 1 letter and 1 number.
-                    </p>
-                    <img src="#" alt="recaptcha" class="recaptcha">
-                    <div class="checkbox">
-                        <input type="checkbox" id="checkbox"><label for="checkbox" class="checkbox">
-                            Opt-in to receive occasional product updates, user research invitations, company
-                            announcements, and digests.</label>
-                        <div class="bottom-signup">Sign up</div>
-                        <div>
-                            <p>By clicking “Sign up”, you agree to our <a class="stack-teams" href="#">terms of service,
-                                    privacy policy</a> and <a href="#" class="stack-teams">cookie</a> policy</p>
-                        </div>
+                <form action="#" method="get">
+                    <div class="name-inf information">
+                        <label for="name"><b>Display name</b></label><br>
+                        <input type="text" class="name" id="name" name="display-name"></input>
                     </div>
-                </div>
+                    <div class="email-inf information">
+                        <label for="email"><b>Email</b></input><br>
+                            <input type="email" id="email" class="email" name="email"></input>
+                    </div>
+                    <div class="password-inf information">
+                        <label for="password"><b>Password</b></label><br>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="info information">
+                        <p>Passwords must contain at least eight characters, including at least 1 letter and 1 number.
+                        </p>
+                        <img src="#" alt="recaptcha" class="recaptcha">
+                        <div class="checkbox">
+                            <input type="checkbox" id="checkbox"><label for="checkbox" class="checkbox">
+                                Opt-in to receive occasional product updates, user research invitations, company
+                                announcements, and digests.</label>
+                            <div class="bottom-signup">Sign up</div>
+
+                            <div>
+                                <p>By clicking “Sign up”, you agree to our <a class="stack-teams" href="#">terms of
+                                        service,
+                                        privacy policy</a> and <a href="#" class="stack-teams">cookie</a> policy</p>
+                            </div>
+                </form>
             </div>
+        </div>
+    </div>
+    <div class="last-text">
+        <div class="last-login-text left-last-text">Already have an account? <a href="#" class="link-decoration">Log in</a> </div>
+        <div class="last-emplyer-text left-last-text">Are you an employer?<a href="#" class="link-decoration">Sign up on Talent <i class="fa-solid fa-up-right-from-square"></i>
+        </a>
         </div>
     </div>
 </body>
