css ve html dosyalarında değişiklikler yapıldı

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <div class="stack-header">
         <ul class="left-upper-buttons">
-            <li class="no-wrap-text"><a href="https://stackoverflow.com/" class="stack-link"><i
+            <li class="no-wrap-text general-list"><a href="https://stackoverflow.com/" class="stack-link"><i
                         class="fa-brands fa-stack-overflow fa-fw"></i>stack<b>overflow</b></a></li>
-            <li>About</li>
-            <li>Products</li>
-            <li class="no-wrap-text">For Teams</li>
+            <li class="general-list">About</li>
+            <li class="general-list">Products</li>
+            <li class="no-wrap-text general-list">For Teams</li>
         </ul>
         <div class="search-bar">
             <label for="searchbar"></label>
             <input type="search" id="searchbar" placeholder="search">
         </div>
         <ul class="right-upper-buttons">
-            <li class="login">Login</li>
-            <li class="signup">Signup</li>
+            <li class="login general-list">Login</li>
+            <li class="signup general-list">Signup</li>
         </ul>
     </div>
 
@@ -32,28 +32,27 @@
         <div class="left-section">
             <div class="left-list-header">Join the Stack Overflow community</div>
             <ul class="left-list">
-                <li class="left-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
+                <li class="left-list general-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
                     a question</li>
-                <li class="left-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock new
+                <li class="left-list general-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock new
                     privileges like voting and commenting</li>
-                <li class="left-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your favorite
+                <li class="left-list general-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your favorite
                     tags, filters, and jobs</li>
-                <li class="left-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn reputation and
+                <li class="left-list general-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn reputation and
                     badges</li>
             </ul>
-            <p class="left-list last-left-text">Collaborate and share knowledge with a private group for
-                FREE.</p>
-            <a href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
-                class="stack-teams last-left-text">Get Stack Overflow for Teams free for up to 50 users.</a>
+            <div><p class="left-list last-left-text">Collaborate and share knowledge with a private group for
+                FREE. <br> <a href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
+                class="stack-teams last-left-text">Get Stack Overflow for Teams free for up to 50 users.</a></p></div>
+            
         </div>
         <div class="right-section">
-            <div class="sign-buttons">
+            <div class="sign-buttons-container">
                 <div class="google-button sign-button"><i class="fa-brands fa-google fa-fw"></i>Sign up with Google
                 </div>
                 <div class="github-button sign-button"><i class="fa-brands fa-github fa-fw"></i>Sign up with GitHub
                 </div>
-                <div class="facebook-button sign-button"><i class="fa-brands fa-facebook fa-fw"></i>Sign up with
-                    Facebook</div>
+                <div class="facebook-button sign-button"><i class="fa-brands fa-facebook fa-fw"></i>Sign up with Facebook</div>
             </div>
             <div class="signup-box">
                 <form action="#" method="get">
