bazı görsel değişiklikler yapıldı

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div class="stack-header">
         <ul class="left-upper-buttons">
-            <li class="no-wrap-text general-list"><a href="https://stackoverflow.com/" class="stack-link"><i
+            <li class="no-wrap-text general-list stack-background-hover-shadow"><a href="https://stackoverflow.com/" class="stack-link"><i
                         class="fa-brands fa-stack-overflow fa-fw"></i>stack<b>overflow</b></a></li>
-            <li class="general-list">About</li>
-            <li class="general-list">Products</li>
-            <li class="no-wrap-text general-list">For Teams</li>
+            <li class="general-list background-hover-shadow">About</li>
+            <li class="general-list background-hover-shadow">Products</li>
+            <li class="no-wrap-text general-list background-hover-shadow">For Teams</li>
         </ul>
         <div class="search-bar">
             <label for="searchbar"></label>
@@ -43,7 +43,7 @@
             </ul>
             <div><p class="left-list last-left-text">Collaborate and share knowledge with a private group for
                 FREE. <br> <a href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
-                class="stack-teams last-left-text">Get Stack Overflow for Teams free for up to 50 users.</a></p></div>
+                class="stack-teams last-left-text link-hover">Get Stack Overflow for Teams free for up to 50 users.</a></p></div>
             
         </div>
         <div class="right-section">
@@ -79,17 +79,17 @@
                             <div class="bottom-signup">Sign up</div>
 
                             <div>
-                                <p>By clicking “Sign up”, you agree to our <a class="stack-teams" href="#">terms of
+                                <p>By clicking “Sign up”, you agree to our <a class="stack-teams link-hover" href="#">terms of
                                         service,
-                                        privacy policy</a> and <a href="#" class="stack-teams">cookie</a> policy</p>
+                                        privacy policy</a> and <a href="#" class="stack-teams link-hover">cookie</a> policy</p>
                             </div>
                 </form>
             </div>
         </div>
     </div>
     <div class="last-text">
-        <div class="last-login-text left-last-text">Already have an account? <a href="#" class="link-decoration">Log in</a> </div>
-        <div class="last-emplyer-text left-last-text">Are you an employer?<a href="#" class="link-decoration">Sign up on Talent <i class="fa-solid fa-up-right-from-square"></i>
+        <div class="last-login-text left-last-text">Already have an account? <a href="#" class="link-decoration link-hover">Log in</a> </div>
+        <div class="last-emplyer-text left-last-text">Are you an employer?<a href="#" class="link-decoration link-hover">Sign up on Talent <i class="fa-solid fa-up-right-from-square link-hover"></i>
         </a>
         </div>
     </div>
