görünüm değişiklikleri yapıldı

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             <div class="signup-box">
                 <form action="#" method="get">
                     <div class="name-inf information">
-                        <label for="name"><b>Display name</b></label><br>
+                        <label for="name" class="bold-label">Display name</label><br>
                         <input type="text" class="name" id="name" name="display-name"></input>
                     </div>
                     <div class="email-inf information">
-                        <label for="email"><b>Email</b></input><br>
+                        <label for="email" class="bold-label">Email</input><br>
                             <input type="email" id="email" class="email" name="email"></input>
                     </div>
                     <div class="password-inf information">
-                        <label for="password"><b>Password</b></label><br>
+                        <label for="password" class="bold-label">Password</label><br>
                         <input type="password" name="password" id="password">
                     </div>
                     <div class="info information">
