--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <div class="stack-header">
         <ul class="left-upper-buttons">
-            <li class="no-wrap-text general-list stack-background-hover-shadow"><a href="https://stackoverflow.com/" class="stack-link"><i
-                        class="fa-brands fa-stack-overflow fa-fw"></i>stack<b>overflow</b></a></li>
+            <li class="no-wrap-text general-list stack-background-hover-shadow"><a href="https://stackoverflow.com/" class="stack-link"><i class="fa-brands fa-stack-overflow fa-fw"></i>stack<b>overflow</b></a></li>
             <li class="general-list background-hover-shadow">About</li>
             <li class="general-list background-hover-shadow">Products</li>
             <li class="no-wrap-text general-list background-hover-shadow">For Teams</li>
@@ -32,19 +31,27 @@
         <div class="left-section">
             <div class="left-list-header">Join the Stack Overflow community</div>
             <ul class="left-list">
-                <li class="left-list general-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get unstuck — ask
+                <li class="left-list general-list"><i class="fa-solid fa-question fa-fw" style="color: blue;"></i>Get
+                    unstuck — ask
                     a question</li>
-                <li class="left-list general-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock new
+                <li class="left-list general-list"><i class="fa-solid fa-up-down fa-fw" style="color: blue;"></i>Unlock
+                    new
                     privileges like voting and commenting</li>
-                <li class="left-list general-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your favorite
+                <li class="left-list general-list"><i class="fa-solid fa-tags fa-fw" style="color: blue;"></i>Save your
+                    favorite
                     tags, filters, and jobs</li>
-                <li class="left-list general-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn reputation and
+                <li class="left-list general-list"><i class="fa-solid fa-trophy fa-fw" style="color: blue;"></i>Earn
+                    reputation and
                     badges</li>
             </ul>
-            <div><p class="left-list last-left-text">Collaborate and share knowledge with a private group for
-                FREE. <br> <a href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
-                class="stack-teams last-left-text link-hover">Get Stack Overflow for Teams free for up to 50 users.</a></p></div>
-            
+            <div>
+                <p class="left-list last-left-text">Collaborate and share knowledge with a private group for
+                    FREE. <br> <a
+                        href="https://stackoverflow.com/teams?utm_source=so-owned&utm_medium=product&utm_campaign=free-50&utm_content=public-sign-up"
+                        class="stack-teams last-left-text link-hover">Get Stack Overflow for Teams free for up to 50
+                        users.</a></p>
+            </div>
+
         </div>
         <div class="right-section">
             <div class="sign-buttons-container">
@@ -52,7 +59,8 @@
                 </div>
                 <div class="github-button sign-button"><i class="fa-brands fa-github fa-fw"></i>Sign up with GitHub
                 </div>
-                <div class="facebook-button sign-button"><i class="fa-brands fa-facebook fa-fw"></i>Sign up with Facebook</div>
+                <div class="facebook-button sign-button"><i class="fa-brands fa-facebook fa-fw"></i>Sign up with
+                    Facebook</div>
             </div>
             <div class="signup-box">
                 <form action="#" method="get">
@@ -79,18 +87,23 @@
                             <div class="bottom-signup">Sign up</div>
 
                             <div>
-                                <p>By clicking “Sign up”, you agree to our <a class="stack-teams link-hover" href="#">terms of
+                                <p>By clicking “Sign up”, you agree to our <a class="stack-teams link-hover"
+                                        href="#">terms of
                                         service,
-                                        privacy policy</a> and <a href="#" class="stack-teams link-hover">cookie</a> policy</p>
+                                        privacy policy</a> and <a href="#" class="stack-teams link-hover">cookie</a>
+                                    policy</p>
                             </div>
                 </form>
             </div>
         </div>
     </div>
     <div class="last-text">
-        <div class="last-login-text left-last-text">Already have an account? <a href="#" class="link-decoration link-hover">Log in</a> </div>
-        <div class="last-emplyer-text left-last-text">Are you an employer?<a href="#" class="link-decoration link-hover">Sign up on Talent <i class="fa-solid fa-up-right-from-square link-hover"></i>
-        </a>
+        <div class="last-login-text left-last-text">Already have an account? <a href="#"
+                class="link-decoration link-hover">Log in</a> </div>
+        <div class="last-emplyer-text left-last-text">Are you an employer?<a href="#"
+                class="link-decoration link-hover">Sign up on Talent <i
+                    class="fa-solid fa-up-right-from-square link-hover"></i>
+            </a>
         </div>
     </div>
 </body>
